<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Political Preparedness</string>
    <string name="launch_upcoming_elections_button">upcoming elections</string>
    <string name="launch_find_my_representatives_button">find my representatives</string>
    <string name="picture_of_politic">picture of politic</string>
    <string name="facebook_icon">facebook icon</string>
    <string name="twitter_icon">twitter icon</string>
    <string name="www_icon">www icon</string>
    <string name="upcoming_elections">Upcoming Elections</string>
    <string name="saved_elections">Saved Elections</string>
    <string name="election_information">Election information</string>
    <string name="voting_locations">Voting Locations</string>
    <string name="ballot_information">Ballot Information</string>
    <string name="permission_denied_explanation">You need to grant location permission in order to select the location.</string>
    <string name="settings">Settings</string>
    <string name="follow_election">Follow election</string>
    <string name="follow_eleciton">follow election</string>
    <string name="unfollow_election">unfollow election</string>
    <string name="correspondence_address">Correspondence Address</string>
    <string name="find_my_representatives">find my representatives</string>
    <string name="use_my_location">use my location</string>
    <string name="representative_search">Representative Search</string>
    <string name="my_representatives">My Representatives</string>
    <string name="address_line_2">Address Line 2</string>
    <string name="address_line_1">Address Line 1</string>
    <string name="city">City</string>
    <string name="zip">Zip</string>

    <!-- TODO: Add necessary string values -->

</resources>
