<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="representative"
            type="com.example.android.politicalpreparedness.representative.model.Representative" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/representativePhoto"
            android:layout_width="54dp"
            android:contentDescription="@string/picture_of_politic"
            android:layout_height="54dp"
            android:layout_marginStart="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/party"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/position"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/position"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/representativePhoto"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@tools:sample/lorem" />

        <TextView
            android:id="@+id/election_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@+id/position"
            app:layout_constraintTop_toBottomOf="@+id/position"
            tools:text="@tools:sample/full_names" />

        <TextView
            android:id="@+id/party"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@+id/election_name"
            app:layout_constraintTop_toBottomOf="@+id/election_name"
            tools:text="Republican party" />

        <ImageView
            android:id="@+id/facebookIcon"
            android:layout_width="24dp"
            android:contentDescription="@string/facebook_icon"
            android:layout_height="24dp"
            android:layout_marginStart="8dp"
            android:src="@drawable/ic_facebook"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/twitterIcon"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/wwwIcon" />

        <ImageView
            android:id="@+id/twitterIcon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="8dp"
            android:src="@drawable/ic_twitter"
            android:contentDescription="@string/twitter_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/facebookIcon" />

        <ImageView
            android:id="@+id/wwwIcon"
            android:layout_width="24dp"
            android:contentDescription="@string/www_icon"
            android:layout_height="24dp"
            android:src="@drawable/ic_www"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/facebookIcon"
            app:layout_constraintHorizontal_bias="0.82"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toEndOf="@+id/party" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>